# compress-pdf

./: .gitignore  .pdm-python  pdf-compressor.spec  pdf_compressor.spec  pyproject.toml
.github/workflows/: build.yml  python-app.yml
src/: pdf-compressor.py
tests/: test_example.py
