[project]
name = "compress-pdf"
version = "0.1.0"
description = "Default template for PDM package"

dependencies = [
    "PyQt6",
    "humanize",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest"
test_cov = "pytest --cov=compress-pdf --cov-report=term-missing"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pytest>=9.0.1",
    "mypy>=1.18.2",
    "pyinstaller>=6.16.0",
    "pytest-cov>=7.0.0",
    "flake8>=7.3.0",
]
